quotes modal one pager

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Alex Wilcken Pratt",
+  "name": "AWP",
   "short_name": "AWP",
   "display": "standalone",
   "start_url": "/",
-  "scope": "./",
+  "scope": "/",
   "icons": [
     {
       "src": "icons/icon-256x256.png",
